bnf.txt
<program> ::= <statement>+
<statement> ::= (<ret> | <if> | <else> | <while> | <function> | <assignment> | <stmt_call>) <s>
<s> ::= (" " | "\n")*
<number> ::= ("0" |  [1-9] [0-9]*)
<var> ::= [a-z]+

<ret> ::= "sigma" <s> <expr> <s> "|"
<if> ::= "sus" <s> <expr> <s> ">>" <s> <statement>* <s> "<<"
<else> ::= "sussy" <s> ">>" <s> <statement>* <s> "<<"
<while> ::= "edge" <s> <expr> <s> ">>" <s> <statement>* <s> "<<"
<function> ::= "skibidi" <s> <var> "(" (<var> <s> ","? <s>)*  ")" <s> ">>" <s> <statement>* <s> "<<"
<assignment> ::= <var> <s> "=" <s> <expr> <s> "|"
<stmt_call> ::= <call> <s> "|"
<call> ::= <var> "(" <s> <expr> <s> ")" 

<expr> ::= <add_sub_expr>
<add_sub_expr> ::= <mul_div_expr> ( <s> ("rizz" | "fanumtax") <s> <mul_div_expr>)?
<mul_div_expr> ::= <equals_expr> ( <s> ("gyatt" | "mog") <s> <equals_expr>)?
<equals_expr> ::= <primary_expr> ( <s> ("==" | "!=") <s> <primary_expr>)?
<primary_expr> ::= (<number> | <call> | <var> | "(" <s> <expr> <s> ")")
